Navigation overflow fix

--- a/app/styles/views/intro.scss
+++ b/app/styles/views/intro.scss
@@ -32,6 +32,7 @@
         width: 100%;
         height: 40%;
 
+        margin-top: -50px;
         border-bottom: 1px solid $perlu-white;
 
         opacity: 1;
